--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_riverpod: ^2.0.2
+  freezed: ^2.2.0
+  styled_text: ^6.0.0
 
 dev_dependencies:
   flutter_test:
